--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <title>Blox Fruits Guide</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
-        body { background: #111; color: white; text-align: center; }
+        body { background: #111; color: white; text-align: center; overflow-x: hidden; }
         header { background: #222; padding: 15px; font-size: 24px; font-weight: bold; }
         nav { background: #333; padding: 10px; }
         nav a { color: white; text-decoration: none; margin: 10px; padding: 8px; display: inline-block; }
         section { padding: 20px; }
-        .card { background: #222; padding: 15px; margin: 10px; border-radius: 8px; }
-        .btn { background: #ff9800; color: black; padding: 10px; border: none; cursor: pointer; margin-top: 10px; }
-        .btn:hover { background: #e68900; }
+        .card { background: #222; padding: 15px; margin: 10px; border-radius: 8px; cursor: pointer; transition: 0.3s; }
+        .card:hover { transform: scale(1.05); background: #333; }
+        .btn { background: #ff9800; color: black; padding: 10px; border: none; cursor: pointer; margin-top: 10px; border-radius: 5px; transition: 0.3s; }
+        .btn:hover { background: #e68900; transform: scale(1.1); }
         .container { max-width: 800px; margin: auto; }
         .fruit-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; }
+        .details-page { position: fixed; top: 0; right: -100%; width: 100%; height: 100vh; background: #222; padding: 20px; text-align: left; transition: right 0.5s ease; box-shadow: -5px 0 10px rgba(0, 0, 0, 0.5); }
+        .details-page h2 { text-align: center; }
+        .close-btn { position: absolute; top: 10px; right: 20px; background: red; color: white; padding: 8px; border: none; cursor: pointer; border-radius: 5px; }
+        .fruit-info { margin-top: 20px; padding: 10px; background: #333; border-radius: 8px; }
         footer { background: #222; padding: 10px; margin-top: 20px; }
     </style>
 </head>
@@ -47,19 +52,47 @@
 
 <footer>© 2025 Blox Fruits Guide | Fan-made Website</footer>
 
+<!-- Hidden Details Page -->
+<div class="details-page" id="details-page">
+    <button class="close-btn" onclick="closeDetails()">X</button>
+    <h2 id="fruit-name"></h2>
+    <div class="fruit-info">
+        <p><strong>Rarity:</strong> <span id="fruit-rarity"></span></p>
+        <p><strong>PvP Rating:</strong> <span id="fruit-pvp"></span></p>
+        <p id="fruit-description"></p>
+    </div>
+</div>
+
 <script>
-    const fruits = ["Dragon", "Venom", "Dough", "Magma", "Dark", "Light", "Phoenix", "Gravity", "Shadow"];
+    const fruits = [
+        { name: "Dragon", rarity: "Mythical", pvp: "9/10", desc: "Dragon fruit gives you powerful flame attacks and a dragon transformation." },
+        { name: "Venom", rarity: "Legendary", pvp: "8.5/10", desc: "Venom fruit provides poison-based attacks with deadly effects over time." },
+        { name: "Dough", rarity: "Mythical", pvp: "9/10", desc: "Dough fruit allows you to create and control sticky dough for powerful combat moves." },
+        { name: "Magma", rarity: "Rare", pvp: "7.5/10", desc: "Magma fruit gives you lava-based attacks and high damage over time." },
+        { name: "Dark", rarity: "Uncommon", pvp: "8/10", desc: "Dark fruit lets you control darkness and use gravitational moves." },
+        { name: "Light", rarity: "Rare", pvp: "7/10", desc: "Light fruit gives you fast mobility and light-speed attacks." }
+    ];
+
     const fruitList = document.getElementById("fruit-list");
 
     fruits.forEach(fruit => {
         let div = document.createElement("div");
         div.className = "card";
-        div.innerHTML = `<strong>${fruit}</strong><br><button class="btn" onclick="showInfo('${fruit}')">More Info</button>`;
+        div.innerHTML = `<strong>${fruit.name}</strong><br><button class="btn" onclick="showDetails('${fruit.name}')">Know More</button>`;
         fruitList.appendChild(div);
     });
 
-    function showInfo(fruit) {
-        alert(fruit + " is one of the strongest fruits in the game!");
+    function showDetails(name) {
+        let fruit = fruits.find(f => f.name === name);
+        document.getElementById("fruit-name").innerText = fruit.name;
+        document.getElementById("fruit-rarity").innerText = fruit.rarity;
+        document.getElementById("fruit-pvp").innerText = fruit.pvp;
+        document.getElementById("fruit-description").innerText = fruit.desc;
+        document.getElementById("details-page").style.right = "0";
+    }
+
+    function closeDetails() {
+        document.getElementById("details-page").style.right = "-100%";
     }
 </script>
 
