--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blox Fruits Guide</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
-        body { background: #111; color: white; text-align: center; overflow-x: hidden; }
-        header { background: #222; padding: 15px; font-size: 24px; font-weight: bold; }
-        nav { background: #333; padding: 10px; }
-        nav a { color: white; text-decoration: none; margin: 10px; padding: 8px; display: inline-block; }
-        section { padding: 20px; }
-        .card { background: #222; padding: 15px; margin: 10px; border-radius: 8px; cursor: pointer; transition: 0.3s; }
-        .card:hover { transform: scale(1.05); background: #333; }
-        .btn { background: #ff9800; color: black; padding: 10px; border: none; cursor: pointer; margin-top: 10px; border-radius: 5px; transition: 0.3s; }
-        .btn:hover { background: #e68900; transform: scale(1.1); }
-        .container { max-width: 800px; margin: auto; }
-        .fruit-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; }
-        .details-page { position: fixed; top: 0; right: -100%; width: 100%; height: 100vh; background: #222; padding: 20px; text-align: left; transition: right 0.5s ease; box-shadow: -5px 0 10px rgba(0, 0, 0, 0.5); }
-        .details-page h2 { text-align: center; }
-        .close-btn { position: absolute; top: 10px; right: 20px; background: red; color: white; padding: 8px; border: none; cursor: pointer; border-radius: 5px; }
-        .fruit-info { margin-top: 20px; padding: 10px; background: #333; border-radius: 8px; }
-        footer { background: #222; padding: 10px; margin-top: 20px; }
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
+        body { background: #0D1117; color: white; text-align: center; }
+        header { background: #161B22; padding: 20px; font-size: 28px; font-weight: bold; }
+        nav { background: #21262D; padding: 10px; }
+        nav a { color: white; text-decoration: none; margin: 15px; padding: 10px; display: inline-block; transition: 0.3s; }
+        nav a:hover { background: #FF9800; color: black; border-radius: 5px; }
+        section { padding: 30px; }
+        .container { max-width: 900px; margin: auto; }
+        .fruit-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; }
+        .card { background: #21262D; padding: 15px; border-radius: 10px; cursor: pointer; transition: 0.3s; text-align: center; }
+        .card:hover { transform: scale(1.05); background: #30363D; }
+        .btn { background: #FF9800; color: black; padding: 10px 15px; border: none; cursor: pointer; margin-top: 10px; border-radius: 5px; transition: 0.3s; }
+        .btn:hover { background: #E68900; transform: scale(1.1); }
+        input { width: 100%; padding: 10px; margin: 10px 0 20px; border: none; border-radius: 5px; }
+        .modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #161B22; padding: 20px; border-radius: 10px; width: 300px; text-align: center; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); }
+        .modal h2 { margin-bottom: 10px; }
+        .modal p { margin-bottom: 10px; }
+        .close-btn { background: red; color: white; padding: 8px 15px; border: none; cursor: pointer; border-radius: 5px; }
+        .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100vh; background: rgba(0, 0, 0, 0.7); }
+        footer { background: #161B22; padding: 15px; margin-top: 20px; font-size: 14px; }
     </style>
 </head>
 <body>
@@ -40,6 +43,7 @@
 
 <section id="fruits" class="container">
     <h2>List of Popular Fruits</h2>
+    <input type="text" id="search" placeholder="Search for a fruit..." onkeyup="filterFruits()">
     <div id="fruit-list" class="fruit-list"></div>
 </section>
 
@@ -52,35 +56,37 @@
 
 <footer>© 2025 Blox Fruits Guide | Fan-made Website</footer>
 
-<!-- Hidden Details Page -->
-<div class="details-page" id="details-page">
-    <button class="close-btn" onclick="closeDetails()">X</button>
+<!-- Hidden Modal -->
+<div class="overlay" id="overlay" onclick="closeDetails()"></div>
+<div class="modal" id="modal">
     <h2 id="fruit-name"></h2>
-    <div class="fruit-info">
-        <p><strong>Rarity:</strong> <span id="fruit-rarity"></span></p>
-        <p><strong>PvP Rating:</strong> <span id="fruit-pvp"></span></p>
-        <p id="fruit-description"></p>
-    </div>
+    <p><strong>Rarity:</strong> <span id="fruit-rarity"></span></p>
+    <p><strong>PvP Rating:</strong> <span id="fruit-pvp"></span></p>
+    <p id="fruit-description"></p>
+    <button class="close-btn" onclick="closeDetails()">Close</button>
 </div>
 
 <script>
     const fruits = [
-        { name: "Dragon", rarity: "Mythical", pvp: "9/10", desc: "Dragon fruit gives you powerful flame attacks and a dragon transformation." },
-        { name: "Venom", rarity: "Legendary", pvp: "8.5/10", desc: "Venom fruit provides poison-based attacks with deadly effects over time." },
-        { name: "Dough", rarity: "Mythical", pvp: "9/10", desc: "Dough fruit allows you to create and control sticky dough for powerful combat moves." },
-        { name: "Magma", rarity: "Rare", pvp: "7.5/10", desc: "Magma fruit gives you lava-based attacks and high damage over time." },
+        { name: "Dragon", rarity: "Mythical", pvp: "9/10", desc: "Dragon fruit grants flame attacks and a dragon transformation." },
+        { name: "Venom", rarity: "Legendary", pvp: "8.5/10", desc: "Venom fruit provides poison-based attacks with deadly effects." },
+        { name: "Dough", rarity: "Mythical", pvp: "9/10", desc: "Dough fruit allows you to create and control sticky dough for combat." },
+        { name: "Magma", rarity: "Rare", pvp: "7.5/10", desc: "Magma fruit grants lava-based attacks and high damage over time." },
         { name: "Dark", rarity: "Uncommon", pvp: "8/10", desc: "Dark fruit lets you control darkness and use gravitational moves." },
-        { name: "Light", rarity: "Rare", pvp: "7/10", desc: "Light fruit gives you fast mobility and light-speed attacks." }
+        { name: "Light", rarity: "Rare", pvp: "7/10", desc: "Light fruit provides fast mobility and light-speed attacks." }
     ];
 
     const fruitList = document.getElementById("fruit-list");
 
-    fruits.forEach(fruit => {
-        let div = document.createElement("div");
-        div.className = "card";
-        div.innerHTML = `<strong>${fruit.name}</strong><br><button class="btn" onclick="showDetails('${fruit.name}')">Know More</button>`;
-        fruitList.appendChild(div);
-    });
+    function loadFruits() {
+        fruitList.innerHTML = "";
+        fruits.forEach(fruit => {
+            let div = document.createElement("div");
+            div.className = "card";
+            div.innerHTML = `<strong>${fruit.name}</strong><br><button class="btn" onclick="showDetails('${fruit.name}')">Know More</button>`;
+            fruitList.appendChild(div);
+        });
+    }
 
     function showDetails(name) {
         let fruit = fruits.find(f => f.name === name);
@@ -88,12 +94,28 @@
         document.getElementById("fruit-rarity").innerText = fruit.rarity;
         document.getElementById("fruit-pvp").innerText = fruit.pvp;
         document.getElementById("fruit-description").innerText = fruit.desc;
-        document.getElementById("details-page").style.right = "0";
+        document.getElementById("modal").style.display = "block";
+        document.getElementById("overlay").style.display = "block";
     }
 
     function closeDetails() {
-        document.getElementById("details-page").style.right = "-100%";
+        document.getElementById("modal").style.display = "none";
+        document.getElementById("overlay").style.display = "none";
     }
+
+    function filterFruits() {
+        let search = document.getElementById("search").value.toLowerCase();
+        let filtered = fruits.filter(fruit => fruit.name.toLowerCase().includes(search));
+        fruitList.innerHTML = "";
+        filtered.forEach(fruit => {
+            let div = document.createElement("div");
+            div.className = "card";
+            div.innerHTML = `<strong>${fruit.name}</strong><br><button class="btn" onclick="showDetails('${fruit.name}')">Know More</button>`;
+            fruitList.appendChild(div);
+        });
+    }
+
+    loadFruits();
 </script>
 
 </body>
